# llm-story-forge

./: .gitignore  README.md
backend/: databse.db  pyproject.toml  requirements.txt
backend/core/: config.py  prompts.py  story_generator.py
frontend/: index.html
frontend/src/: App.css  App.jsx  index.css  util.js
