[project]
name = "backend"
version = "0.1.0"
description = "LLM-powered choose-your-own-adventure story generator"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[all]>=0.115.12",
    "langchain>=0.3.25",
    "langchain-groq>=0.3.2",
    "python-dotenv>=1.1.0",
    "sqlalchemy>=2.0.41",
    "uvicorn>=0.34.2",
]